# Cold-Email-Generating-Tool

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
backend/: config.py  main.py  smtp_helpers.py
backend/services/: gmail_service.py  groq_service.py
frontend/: app.js  index.html  style.css
